Fixed login error message change. Changed signup page background image. Changed login page background image. Changed djangohosting card image. Changed pricing font. Fixed pricing alignment. Fixed selector price

--- a/hosting/static/hosting/css/landing-page.css
+++ b/hosting/static/hosting/css/landing-page.css
@@ -72,12 +72,12 @@ h6 {
 }
 
 .intro-login {
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/login-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
 .intro-signup {
-    background: url(../img/configure.jpg) no-repeat center center;
+    background: url(../img/signup-bg.png) no-repeat center center;
     background-size: cover;
 }
 
